Based on CSS now. Some absolute positioning that seems funky...

--- a/index.html
+++ b/index.html
@@ -1,41 +1,39 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+
 <head>
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <meta name ="description" content="The Home Page of DN Composite Masts">
-  <meta name="keywords" content="DN Composite Mast, DN, iceboat, ice boat, mast, composite, composites, fiberglass, carbon, carbon fiber">
-  <title>DN Composite Masts</title>
-  <link rel="stylesheet" type="text/css" href="DNCMstyle.css" />
+   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+   <meta name ="description" content="The Home Page of DN Composite Masts">
+   <meta name="keywords" content="DN Composite Mast, DN, iceboat, ice boat, mast, composite, composites, fiberglass, carbon, carbon fiber">
+   <title>DN Composite Masts</title>
+   <link rel="stylesheet" type="text/css" href="DNCMstyle.css" />
 </head>
+
 <body>
-   <div style="text-align:center;height:100%">
-   <div style="background-color:#ffffff;width:900px;margin-left:auto;margin-right:auto;">
-      <p style="height:20px;"></p>
-      <div style="text-align:center;"><p class="topTitle">
-         DN Composite Masts
-      </p></div>
-      <table border=1>
-         <tr>
-            <td width="12%">
-               Left Nav
-            </td>
-            <td>
-               <p class="textCtr"  style="margin-top:10px">
-                  Welcome to the new <b>DN Composite Masts</b> web-site.
-               </p>
-               <p class="textCtr"  style="margin-top:10px;">
-                  If you have more questions, please send an e-mail to:
-                  <a href="mailto:info@dncompositemast.com">info@dncompositemast.com</a><br />.
-               </p>
-            </td>
-            <td width="12%">
-               Right Nav
-            </td>
-         </tr>
-      </table>
-      <p><hr style="margin-top:10px;"/></p>
-      <p class="footer">Copyright &copy; 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
-   </div>
-   </div>
+<div id="wrapper">
+  <div id="header">DN Composite Masts</div>
+
+  <div id="content-box1"><p>Box 1</p></div>
+  <div id="content-box2"><p>Box 2</p></div>
+  <div id="content-box3"><p>Box 3</p></div>
+
+  <div id="content">
+    <div id="content-left">
+         <p>Home</p>
+         <p>About</p>
+         <p>Products</p>
+         <p>Photos</p>
+         <p>Videos</p>
+         <p>Contact Us</p>
+      </div>
+    <div id="content-main">
+         <p>Main home page content or image goes here...</p>
+      </div>
+  </div>
+
+  <div id="footer">Footer text and links can go all the way along here... text text text text text text...</div>
+  <div id="bottom">Copyright 2012 DN Compsite Masts, Inc. - All Rights Reserved</a></div>
+</div>
 </body>
 </html>
