Some more mods. Better roll-over links.

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
   </head>
   <body>
     <div class="container">
-      <p style="padding-left:30px; background-color:#077c89; color:white; font-weight:bold; font-size:36pt; margin-bottom:0px; border-width:2px; border-style:solid; border-color:#077c89;">DN Composite Masts</p>
+      <p style="padding:2; padding-left:30px; background-color:#077c89; color:white; font-weight:bold; font-size:36pt; margin-bottom:0px;">DN Composite Masts</p>
       <div style="margin-bottom:10px; border-width:2px; border-style:solid; border-color:black;">
          <p style="font-size:20pt; font-weight:bold; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4 colborder" style="background-color:#f0f0f0; height:600px;">
-         <p class="sidebarLink"><a href="">Home</a></p>
-         <p class="sidebarLink"><a href="">Products</a></p>
-         <p class="sidebarLink"><a href="">Photos</a></p>
-         <p class="sidebarLink"><a href="">About</a></p>
-         <p class="sidebarLink"><a href="">Contact Us</a></p>
+         <p class="sidebar"><a href="" class="sidebar">Home</a></p>
+         <p class="sidebar"><a href="" class="sidebar">Products</a></p>
+         <p class="sidebar"><a href="" class="sidebar">Photos</a></p>
+         <p class="sidebar"><a href="" class="sidebar">About</a></p>
+         <p class="sidebar"><a href="" class="sidebar">Contact Us</a></p>
          <hr style="margin:0; margin-top:10px; margin-bottom:10px;">
          <h4 style="font-weight:bold;">More Sidebar Items;</h4>
          <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
