--- a/index.html
+++ b/index.html
@@ -15,23 +15,24 @@
     <!-- link rel="stylesheet" href="blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" -->
     <link rel="stylesheet" href="DNCMstyle.css" type="text/css">
   </head>
-  <body>
+  <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
       <p style="padding:2; padding-left:30px; background-color:#077c89; color:white; font-weight:bold; font-size:36pt; margin-bottom:0px;">DN Composite Masts</p>
       <div style="margin-bottom:10px; border-width:2px; border-style:solid; border-color:black;">
-         <p style="font-size:20pt; font-weight:bold; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
+         <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
-      <div class="span-4 colborder" style="background-color:#f0f0f0; height:600px;">
+      <div class="span-4" style="background-color:#f0f0f0; height:600px; border-width:2px; border-style:solid; border-color:black;">
          <p class="sidebar"><a href="" class="sidebar">Home</a></p>
          <p class="sidebar"><a href="" class="sidebar">Products</a></p>
          <p class="sidebar"><a href="" class="sidebar">Photos</a></p>
          <p class="sidebar"><a href="" class="sidebar">About</a></p>
          <p class="sidebar"><a href="" class="sidebar">Contact Us</a></p>
          <hr style="margin:0; margin-top:10px; margin-bottom:10px;">
-         <h4 style="font-weight:bold;">More Sidebar Items;</h4>
-         <p>Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
-         <p>Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
+         <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
+         <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
+         <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
       </div>
+      <div class="span-1" > </div>
       <div class="span-19 last">
         <img src="20120107DN19250-X2_750w.jpg" width=750 height=221 />
         <p>Lorem ipsum dolor sit amet, <em>consectetuer adipiscing elit</em>. Nunc congue ipsum vestibulum libero. Aenean vitae justo. Nam eget tellus. Etiam convallis, est eu lobortis mattis, lectus tellus tempus felis, a ultricies erat ipsum at metus.</p>
