--- a/index.html
+++ b/index.html
@@ -23,17 +23,19 @@
       </div>
       <div class="span-5" style="background-color:#f0f0f0;">
       <div style="border-width:2px; border-style:solid; border-color:black; height:600px;" >
-         <p class="sidebar"><a href="" class="sidebar">Home</a></p>
-         <p class="sidebar"><a href="" class="sidebar">Products</a></p>
-         <p class="sidebar"><a href="" class="sidebar">Photos</a></p>
-         <p class="sidebar"><a href="" class="sidebar">About</a></p>
-         <p class="sidebar"><a href="" class="sidebar">Contact Us</a></p>
+         <p class="sidebar"><a href="index.html" class="sidebar">Home</a></p>
+         <p class="sidebar"><a href="products.html" class="sidebar">Products</a></p>
+         <p class="sidebar"><a href="Photos" class="sidebar">Photos</a></p>
+         <p class="sidebar"><a href="about.html" class="sidebar">About</a></p>
+         <p class="sidebar"><a href="contact.html" class="sidebar">Contact Us</a></p>
+         <p class="sidebar"><a href="forsale.html" class="sidebar">For Sale</a></p>
          <hr style="margin:0; margin-top:10px; margin-bottom:10px;">
          <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
          <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
          <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
       </div></div>
       <div class="span-19 last">
+      <!-- Main Block Content Starts Here -->
         <img src="20120107DN19250-X2_750w.jpg" width=750 height=221 />
         <p>Lorem ipsum dolor sit amet, <em>consectetuer adipiscing elit</em>. Nunc congue ipsum vestibulum libero. Aenean vitae justo. Nam eget tellus. Etiam convallis, est eu lobortis mattis, lectus tellus tempus felis, a ultricies erat ipsum at metus.</p>
         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. <a href="#">Morbi et risus</a>.</p>
@@ -50,9 +52,10 @@
           <h6>This is another nested column</h6>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         </div>
+      <!-- Main Block Content Ends Here -->
       </div>
       <hr style="margin:0;">
-      <p style="font-size=8pt; text-align:center; background-color:#1010a0; color:#f0f0ff;">Copyright 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
+      <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
     </div>
   </body>
 </html>
