Added token text to each sub-page. Also tweeked the footer spacing a bit.

--- a/page_template.html
+++ b/page_template.html
@@ -38,7 +38,7 @@
       <!-- Main Block Content Starts Here -->
       <!-- Main Block Content Ends Here -->
       </div>
-      <hr style="margin:0;">
+      <hr  style="margin-bottom:2px;" />
       <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
     </div>
   </body>
