--- a/page_template.html
+++ b/page_template.html
@@ -3,17 +3,17 @@
 
 <html lang="en" style="overflow-y: scroll;">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>DN Composite Masts</title>
 
     <!-- Framework CSS -->
-    <link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection">
-    <link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print">
+    <link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection" />
+    <link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print" />
     <!--[if lt IE 8]><link rel="stylesheet" href="blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
 
     <!-- Import fancy-type plugin for the sample page. -->
     <!-- link rel="stylesheet" href="blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" -->
-    <link rel="stylesheet" href="DNCMstyle.css" type="text/css">
+    <link rel="stylesheet" href="DNCMstyle.css" type="text/css" />
   </head>
   <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
@@ -29,7 +29,7 @@
          <p class="sidebar"><a href="About.html" class="sidebar">About</a></p>
          <p class="sidebar"><a href="Contact.html" class="sidebar">Contact Us</a></p>
          <p class="sidebar"><a href="ForSale.html" class="sidebar">For Sale</a></p>
-         <hr style="margin:0; margin-top:10px; margin-bottom:10px;">
+         <hr style="margin:0; margin-top:10px; margin-bottom:10px;" />
          <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
          <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
          <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
