Narrowed the sidebar and increased the width of the home-page image to match.

--- a/page_template.html
+++ b/page_template.html
@@ -21,8 +21,8 @@
       <div style="margin-bottom:10px; border-width:2px; border-style:solid; border-color:black;">
          <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
-      <div class="span-5" style="background-color:#f0f0f0;">
-      <div style="border-width:2px; border-style:solid; border-color:black; height:600px;" >
+      <div class="span-4" style="background-color:#f0f0f0;">
+      <div style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px;" >
          <p class="sidebar"><a href="index.html" class="sidebar">Home</a></p>
          <p class="sidebar"><a href="Products.html" class="sidebar">Products</a></p>
          <p class="sidebar"><a href="Photos.html" class="sidebar">Photos</a></p>
@@ -34,7 +34,7 @@
          <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
          <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
       </div></div>
-      <div class="span-19 last">
+      <div class="span-20 last">
       <!-- Main Block Content Starts Here -->
       <!-- Main Block Content Ends Here -->
       </div>
