Build now done using XML-parsed files.

--- a/page_template.html
+++ b/page_template.html
@@ -34,7 +34,7 @@
          <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
          <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
       </div></div>
-      <div class="span-20 last">
+      <div id="ContentDiv" class="span-20 last">
       <!-- Main Block Content Starts Here -->
       <!-- Main Block Content Ends Here -->
       </div>
