Added code and templates to make the current page's sidebar link inactive and highlighted.

--- a/page_template.html
+++ b/page_template.html
@@ -22,21 +22,15 @@
          <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4" style="background-color:#f0f0f0;">
-      <div style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px;" >
-         <p class="sidebar"><a href="index.html" class="sidebar">Home</a></p>
-         <p class="sidebar"><a href="Products.html" class="sidebar">Products</a></p>
-         <p class="sidebar"><a href="Photos.html" class="sidebar">Photos</a></p>
-         <p class="sidebar"><a href="About.html" class="sidebar">About</a></p>
-         <p class="sidebar"><a href="Contact.html" class="sidebar">Contact Us</a></p>
-         <p class="sidebar"><a href="ForSale.html" class="sidebar">For Sale</a></p>
+      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px; padding-left:4px; padding-right:4px;" >
+         <!-- Sidebar Liks Will Go Here -->
          <hr style="margin:0; margin-top:10px; margin-bottom:10px;" />
          <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
          <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
          <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
       </div></div>
       <div id="ContentDiv" class="span-20 last">
-      <!-- Main Block Content Starts Here -->
-      <!-- Main Block Content Ends Here -->
+      <!-- Main Block Content Will Go Here -->
       </div>
       <hr  style="margin-bottom:2px;" />
       <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
