--- a/page_template.html
+++ b/page_template.html
@@ -22,7 +22,7 @@
          <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4" style="background-color:#f0f0f0;">
-      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px; padding-left:4px; padding-right:4px;" >
+      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px; " >
          <!-- Sidebar Liks Will Go Here -->
          <hr style="margin:0; margin-top:10px; margin-bottom:10px;" />
          <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
