--- a/page_template.html
+++ b/page_template.html
@@ -33,7 +33,7 @@
       <!-- Main Block Content Will Go Here -->
       </div>
       <hr  style="margin-bottom:2px;" />
-      <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 DN Composite Masts, Inc. - All Rights Reserved</p>
+      <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 RKR Composites - All Rights Reserved</p>
     </div>
   </body>
 </html>
