Changed sidebar layout.

--- a/page_template.html
+++ b/page_template.html
@@ -22,18 +22,14 @@
          <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4" style="background-color:#f0f0f0;">
-      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; height:600px; padding-top:4px; " >
+      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; padding-top:4px; padding-bottom:10px;" >
          <!-- Sidebar Liks Will Go Here -->
-         <hr style="margin:0; margin-top:10px; margin-bottom:10px;" />
-         <p class="indent1" style="font-size:12pr; font-weight:bold; margin-bottom:3px;">More Sidebar Items:</p>
-         <p class="indent1">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras ornare mattis nunc.</p>
-         <p class="indent1">Mauris a lectus. Aliquam erat volutpat. Phasellus ultrices mi a sapien. Nunc rutrum egestas lorem. Duis ac sem sagittis elit tincidunt gravida. Mauris a lectus. </p>
+
       </div></div>
       <div id="ContentDiv" class="span-20 last">
       <!-- Main Block Content Will Go Here -->
       </div>
-      <hr  style="margin-bottom:2px;" />
-      <p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 RKR Composites - All Rights Reserved</p>
+      <div class="span-24"><p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 RKR Composites - All Rights Reserved</p></div>
     </div>
   </body>
 </html>
