--- a/page_template.html
+++ b/page_template.html
@@ -17,12 +17,12 @@
   </head>
   <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
-      <p style="padding:2; padding-left:30px; background-color:#077c89; color:white; font-weight:bold; font-size:36pt; margin-bottom:0px;">DN Composite Masts</p>
-      <div style="margin-bottom:10px; border-width:2px; border-style:solid; border-color:black;">
-         <p style="font-size:20pt; font-weight:bold; background-color: white; color:#ff3010; font-style:italic; padding-left:60px; margin-bottom:0px; margin-top:0; padding-bottom:0px; padding-top:0px;">Fast masts that won't break the bank...</p>
+      <div class="mainLogo">DN Composite Masts</div>
+      <div class="subLogo">
+         <p class="subLogo">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4" style="background-color:#f0f0f0;">
-      <div id="sidebarLinks" style="border-width:2px; border-style:solid; border-color:black; padding-top:4px; padding-bottom:10px;" >
+      <div id="sidebarLinks" >
          <!-- Sidebar Liks Will Go Here -->
 
       </div></div>
