--- a/page_template.html
+++ b/page_template.html
@@ -5,7 +5,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>DN Composite Masts</title>
-
+    <!-- http://colorschemedesigner.com/#3k31TuLsgw0w0 -->
     <!-- Framework CSS -->
     <link rel="stylesheet" href="blueprint/screen.css" type="text/css" media="screen, projection" />
     <link rel="stylesheet" href="blueprint/print.css" type="text/css" media="print" />
@@ -17,7 +17,10 @@
   </head>
   <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
-      <div class="mainLogo">DN Composite Masts</div>
+      <div class="mainLogo">
+         RWR Composites
+         <span class="mainLogoInset" ><a href="."> DNCompositeMasts.com</a></span>
+      </div>
       <div class="subLogo">
          <p class="subLogo">Fast masts that won't break the bank...</p>
       </div>
