--- a/page_template.html
+++ b/page_template.html
@@ -17,17 +17,16 @@
   </head>
   <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
-      <div class="mainLogo">
+      <div class="span-24 mainLogo">
          RWR Composites
-         <span class="mainLogoInset" ><a href="."> DNCompositeMasts.com</a></span>
+         <span class="mainLogoInset" ><a href="index.html"> DNCompositeMasts.com</a></span>
       </div>
-      <div class="subLogo">
+      <div class="span-24 subLogo">
          <p class="subLogo">Fast masts that won't break the bank...</p>
       </div>
       <div class="span-4" style="background-color:#f0f0f0;">
-      <div id="sidebarLinks" >
+      <div id="sidebarLinks" class="sidebarLinks">
          <!-- Sidebar Liks Will Go Here -->
-
       </div></div>
       <div id="ContentDiv" class="span-20 last">
       <!-- Main Block Content Will Go Here -->
