--- a/page_template.html
+++ b/page_template.html
@@ -18,7 +18,7 @@
   <body style="background-image:url(gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
       <div class="span-24 mainLogo">
-         RWR Composites
+         RKR Composites
          <span class="mainLogoInset" ><a href="index.html"> DNCompositeMasts.com</a></span>
       </div>
       <div class="span-24 subLogo">
