Added another image to the home page and created a proto-template for single-image pages.

--- a/dncompositemasts.com_new/images/DSC_5487 (1)a_900x600.html
+++ b/dncompositemasts.com_new/images/DSC_5487 (1)a_900x600.html
@@ -15,18 +15,22 @@
     <!-- link rel="stylesheet" href="../blueprint/plugins/fancy-type/screen.css" type="text/css" media="screen, projection" -->
     <link rel="stylesheet" href="../DNCMstyle.css" type="text/css" />
   </head>
-  <body style="background-image:url(../gradient_350.png); background-repeat: repeat-x;" >
+   <body style="background-image:url(../gradient_350.png); background-repeat: repeat-x;" >
     <div class="container">
-      <div class="span-24 mainLogo" style="margin-bottom:5px;">
+      <div class="span-24 mainLogo" style="margin-bottom:5px; z-index:1;">
          RKR Composites
          <span class="mainLogoInset" ><a href="../index.html"> DNCompositeMasts.com</a></span>
       </div>
-      <div class="span-24"><div class="photoPage">
-         <img src="DSC_5487 (1)a_900x600.jpg" width="900" height="600"/>
-         <span class="credit"><a href="http://cefirmbach.com/index.html" target="_blank" >Photo: Catherine E Firmbach</a></span>
-      </div></div>
-      <div class="span-18 prepend-3 photoPageCaption">
-         Jori Lenon and her bright red <i>Twizzler</i> mast round the windward mark during the 2012 DN North American Championship Regatta on Green Bay.
+      <div class="span-24">
+         <div class="photoPage" style="width:950px; height:650px;">
+            <img src="DSC_5487 (1)a_900x600.jpg" width="900" height="600"/>
+            <span class="credit"><a href="http://cefirmbach.com/index.html" target="_blank" >Photo: Catherine E Firmbach</a></span>
+         </div>
+      </div>
+      <div class="span-24">
+         <div class="photoPageCaption" style="width:900px;">
+            Jori Lenon and her bright red <i>Twizzler</i> mast round the windward mark during the 2012 DN North American Championship Regatta on Green Bay.
+         </div>
       </div>
       <div class="span-24"><p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 RKR Composites - All Rights Reserved</p></div>
     </div>
