--- a/photo_template.html
+++ b/photo_template.html
@@ -22,15 +22,13 @@
          <span class="mainLogoInset"><a href="../index.html"> DNCompositeMasts.com</a></span>
       </div>
       <div class="span-24">
-         <div class="photoPage" style="width:700px; height:700px;">
+         <div id="photoDiv" class="photoPage" style="">
             <img id="imageTag" src="" width="" height=""/>
-            <span id="attribution" class="credit"><a href="" target="_blank" ></a></span>
+            <span id="creditSpan" class="credit"><a href="" target="_blank" ></a></span>
          </div>
       </div>
       <div class="span-24">
-         <div id="caption" class="photoPageCaption" style="width:650px;">
-
-         </div>
+         <div id="caption" class="photoPageCaption" style=""></div>
       </div>
       <div class="span-24"><p style="font-size=8pt; text-align:center; background-color:#077c89; color:#f0f0ff;">Copyright 2012 RKR Composites - All Rights Reserved</p></div>
     </div>
